# MarkerDetectConsole

./: CMakeLists.txt  README.md  camthread.cpp  camthread.h  datapack.h  main.cpp  serialthread.cpp  serialthread.h
